--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc -b && node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "build": "tsc",
+  "start": "npm run build && node ./dist/index.js",
+  "dev": "tsc -b && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
